analysis/spring-framework/step_1/logs/5571-27c1280.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-core:compileJava
:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovywarning: [options] bootstrap class path not set in conjunction with -source 1.6
1 warning

:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava/home/ubuntu/bugs/spring-framework/spring-context/src/main/java/org/springframework/context/support/GenericApplicationContext.java:88: error: GenericApplicationContext is not abstract and does not override abstract method addResourceResolver(ProtocolResolver) in ConfigurableApplicationContext
public class GenericApplicationContext extends AbstractApplicationContext implements BeanDefinitionRegistry {
       ^
/home/ubuntu/bugs/spring-framework/spring-context/src/main/java/org/springframework/context/support/FileSystemXmlApplicationContext.java:55: error: FileSystemXmlApplicationContext is not abstract and does not override abstract method addResourceResolver(ProtocolResolver) in ConfigurableApplicationContext
public class FileSystemXmlApplicationContext extends AbstractXmlApplicationContext {
       ^
/home/ubuntu/bugs/spring-framework/spring-context/src/main/java/org/springframework/context/support/ClassPathXmlApplicationContext.java:51: error: ClassPathXmlApplicationContext is not abstract and does not override abstract method addResourceResolver(ProtocolResolver) in ConfigurableApplicationContext
public class ClassPathXmlApplicationContext extends AbstractXmlApplicationContext {
       ^
3 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-context:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 32.64 secs
